force-app/main/default/objects/HRCFSL_Platform_Event_Log__c/HRCFSL_Platform_Event_Log__c.object-meta.xml
<CustomObject>
    <label>Platform Event Log</label>
    <nameField>
        <displayFormat>PEL-{000000000}</displayFormat>
        <label>Platform Event Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>