force-app/main/default/objects/HRCFSL_Platform_Event_Log__c/fields/Complaint_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Qualification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint Qualification</label>
    <referenceTo>HRCSVC_Complaint_Qualification__c</referenceTo>
    <relationshipLabel>Platform Event Logs</relationshipLabel>
    <relationshipName>Platform_Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>