force-app/main/default/objects/HRCFSL_Platform_Event_Log__c/fields/HRCFSL_Event_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Event_Created_Date__c</fullName>
    <label>Event Created Date</label>
    <type>DateTime</type>
</CustomField>