force-app/main/default/objects/HRCFSL_Platform_Event_Log__c/fields/HRCFSL_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Platform Event Logs</relationshipLabel>
    <relationshipName>Platform_Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>