force-app/main/default/objects/HRCFSL_Platform_Event_Log__c/fields/HRCFSL_Status_Change_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Status_Change_Time__c</fullName>
    <label>Status Change Time</label>
    <type>DateTime</type>
</CustomField>