force-app/main/default/objects/HRCFSL_Platform_Event_Log__c/fields/HRCFSL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Platform Event Logs</relationshipLabel>
    <relationshipName>Platform_Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>