force-app/main/default/objects/HRCFSL_Platform_Event_Log__c/fields/HRCFSL_Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order_Status__c</fullName>
    <label>Work Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>